--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@eeacms/volto-eea-website-theme",
     "@eeacms/volto-eea-website-policy",
     "@eeacms/volto-redmine-helpdesk",
+    "@eeacms/volto-anchors",
     "volto-subsites"
   ],
   "jest": {
@@ -157,6 +158,7 @@
     "@eeacms/volto-eea-design-system": "1.0.0-alpha.13"
   },
   "dependencies": {
+    "@eeacms/volto-anchors": "*",
     "@eeacms/volto-datahub": "1.0.10",
     "@eeacms/volto-eea-design-system": "1.0.0-alpha.13",
     "@eeacms/volto-eea-kitkat": "10.6.1",
