--- a/package.json
+++ b/package.json
@@ -47,10 +47,11 @@
   "addons": [
     "@eeacms/volto-eea-kitkat",
     "@eeacms/volto-workflow-progress",
+    "@eeacms/volto-redmine-helpdesk",
+    "@eeacms/volto-nextcloud-video-block",
     "@eeacms/volto-searchlib",
     "@eeacms/volto-globalsearch",
     "@eeacms/volto-datahub",
-    "@eeacms/volto-redmine-helpdesk",
     "@eeacms/volto-eea-design-system",
     "@eeacms/volto-eea-website-theme",
     "@eeacms/volto-eea-website-policy",
@@ -163,6 +164,7 @@
     "@eeacms/volto-eea-website-policy": "1.3.4",
     "@eeacms/volto-eea-website-theme": "1.8.2",
     "@eeacms/volto-globalsearch": "1.0.11",
+    "@eeacms/volto-nextcloud-video-block": "0.1.0",
     "@eeacms/volto-redmine-helpdesk": "0.1.9",
     "@eeacms/volto-searchlib": "0.4.25",
     "@eeacms/volto-workflow-progress": "3.0.1",
