--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "eea-website-frontend",
   "description": "EEA Main Website frontend (Plone 6)",
   "license": "MIT",
-  "version": "1.0.0-beta.7",
+  "version": "1.0.0",
   "scripts": {
     "start": "razzle start",
     "postinstall": "make omelette && make patches",
@@ -155,11 +155,11 @@
     "node": "^12 || ^14 || ^16"
   },
   "resolutions": {
-    "@eeacms/volto-eea-design-system": "1.0.0-beta.6"
+    "@eeacms/volto-eea-design-system": "1.0.1"
   },
   "dependencies": {
     "@eeacms/volto-datahub": "1.0.17",
-    "@eeacms/volto-eea-design-system": "1.0.0-beta.6",
+    "@eeacms/volto-eea-design-system": "1.0.1",
     "@eeacms/volto-eea-kitkat": "13.0.0",
     "@eeacms/volto-eea-website-policy": "1.4.0",
     "@eeacms/volto-eea-website-theme": "1.10.0",
