--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   ],
   "addons": [
     "@eeacms/volto-eea-kitkat",
+    "@eeacms/volto-embed",
     "@eeacms/volto-datablocks",
     "@eeacms/volto-plotlycharts",
     "@eeacms/volto-workflow-progress",
@@ -156,6 +157,8 @@
     "node": "^12 || ^14 || ^16"
   },
   "resolutions": {
+    "@eeacms/volto-embed": "5.0.2",
+    "@eeacms/volto-datablocks": "5.0.0",
     "@eeacms/volto-datahub": "1.0.22",
     "@eeacms/volto-eea-design-system": "1.12.0",
     "@eeacms/volto-eea-kitkat": "15.5.0",
@@ -169,12 +172,13 @@
     "volto-subsites": "4.0.0"
   },
   "dependencies": {
-    "@eeacms/volto-datablocks": "4.0.4",
+    "@eeacms/volto-datablocks": "5.0.0",
     "@eeacms/volto-datahub": "1.0.22",
     "@eeacms/volto-eea-design-system": "1.12.0",
     "@eeacms/volto-eea-kitkat": "15.5.0",
     "@eeacms/volto-eea-website-policy": "1.6.0",
     "@eeacms/volto-eea-website-theme": "1.14.1",
+    "@eeacms/volto-embed": "5.0.2",
     "@eeacms/volto-globalsearch": "1.0.15",
     "@eeacms/volto-plotlycharts": "6.0.4",
     "@eeacms/volto-redmine-helpdesk": "0.1.11",
