--- a/package.json
+++ b/package.json
@@ -171,7 +171,10 @@
     "@kitconcept/volto-blocks-grid": "5.1.1",
     "volto-subsites": "4.0.0",
     "react-countup/countup.js": "2.5.0",
-    "d3-array": "^2.12.1"
+    "d3-array": "^2.12.1",
+    "@babel/core": "7.20.12",
+    "@babel/traverse": "7.20.12",
+    "@babel/types": "7.20.7"
   },
   "dependencies": {
     "@eeacms/volto-datablocks": "5.0.0",
