--- a/package.json
+++ b/package.json
@@ -170,6 +170,7 @@
     "@eeacms/volto-workflow-progress": "3.1.0",
     "volto-subsites": "4.0.0",
     "react-countup/countup.js": "2.5.0",
+    "react-colorscales": "github:eea/react-colorscales#1.0.2",
     "d3-array": "^2.12.1"
   },
   "dependencies": {
