--- a/package.json
+++ b/package.json
@@ -173,6 +173,7 @@
     "@eeacms/volto-plotlycharts": "7.0.4",
     "@eeacms/volto-redmine-helpdesk": "0.1.14",
     "@eeacms/volto-searchlib": "0.6.4",
+    "@eeacms/volto-toolbar-actions": "0.2.0",
     "@eeacms/volto-workflow-progress": "3.1.1",
     "@eeacms/volto-block-data-figure": "6.0.1",
     "@eeacms/volto-editing-progress": "0.2.3",
@@ -198,6 +199,7 @@
     "@eeacms/volto-redmine-helpdesk": "0.1.14",
     "@eeacms/volto-searchlib": "0.6.4",
     "@eeacms/volto-tableau": "5.0.0",
+    "@eeacms/volto-toolbar-actions": "0.2.0",
     "@eeacms/volto-workflow-progress": "3.1.1",
     "@plone/volto": "16.24.0",
     "volto-subsites": "4.0.0"
