--- a/package.json
+++ b/package.json
@@ -193,7 +193,7 @@
     "@eeacms/volto-eea-design-system": "1.22.4",
     "@eeacms/volto-eea-kitkat": "21.1.0",
     "@eeacms/volto-eea-map": "3.2.1",
-    "@eeacms/volto-eea-website-policy": "1.11.1",
+    "@eeacms/volto-eea-website-policy": "github:eea/volto-eea-website-policy#1.12.0-beta.2",
     "@eeacms/volto-eea-website-theme": "1.26.2",
     "@eeacms/volto-embed": "9.0.5",
     "@eeacms/volto-globalsearch": "1.0.22",
