--- a/package.json
+++ b/package.json
@@ -168,7 +168,7 @@
     "@eeacms/volto-eea-design-system": "1.22.4",
     "@eeacms/volto-eea-kitkat": "21.1.0",
     "@eeacms/volto-eea-map": "3.2.1",
-    "@eeacms/volto-eea-website-policy": "1.12.0-beta.1",
+    "@eeacms/volto-eea-website-policy": "github:eea/volto-eea-website-policy#1.12.0-beta.2",
     "@eeacms/volto-eea-website-theme": "1.26.2",
     "@eeacms/volto-globalsearch": "1.0.22",
     "@eeacms/volto-plotlycharts": "8.2.0",
