--- a/jsconfig.json
+++ b/jsconfig.json
@@ -165,6 +165,9 @@
             ],
             "@eeacms/volto-controlpanel": [
                 "addons/volto-controlpanel/src"
+            ],
+            "@eeacms/volto-block-data-table": [
+                "addons/volto-block-data-table/src"
             ]
         },
         "baseUrl": "src"
