--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@eeacms/volto-eea-design-system",
     "@eeacms/volto-eea-website-theme",
     "@eeacms/volto-eea-website-policy",
+    "@plone-collective/volto-authomatic",
     "@eeacms/volto-citation",
     "volto-subsites"
   ],
@@ -177,6 +178,7 @@
     "@eeacms/volto-block-data-figure": "7.2.0",
     "@eeacms/volto-editing-progress": "0.4.0",
     "@eeacms/volto-citation": "0.1.5",
+    "@plone-collective/volto-authomatic": "2.0.1",
     "volto-subsites": "4.0.0",
     "react-colorscales": "github:eea/react-colorscales#1.0.2",
     "d3-array": "^2.12.1"
@@ -199,6 +201,7 @@
     "@eeacms/volto-searchlib": "0.9.2",
     "@eeacms/volto-tableau": "7.2.1",
     "@eeacms/volto-workflow-progress": "4.1.1",
+    "@plone-collective/volto-authomatic": "2.0.1",
     "@plone/volto": "16.31.4",
     "volto-subsites": "4.0.0"
   },
