--- a/package.json
+++ b/package.json
@@ -164,11 +164,11 @@
     "@eeacms/volto-embed": "9.1.1",
     "@eeacms/volto-datablocks": "6.4.1",
     "@eeacms/volto-datahub": "1.0.33",
-    "@eeacms/volto-eea-design-system": "1.23.6",
+    "@eeacms/volto-eea-design-system": "1.23.7",
     "@eeacms/volto-eea-kitkat": "24.0.1",
     "@eeacms/volto-eea-map": "3.3.1",
-    "@eeacms/volto-eea-website-policy": "1.14.0",
-    "@eeacms/volto-eea-website-theme": "1.33.2",
+    "@eeacms/volto-eea-website-policy": "<2.0.0",
+    "@eeacms/volto-eea-website-theme": "<2.0.0",
     "@eeacms/volto-globalsearch": "1.1.0",
     "@eeacms/volto-plotlycharts": "9.2.0",
     "@eeacms/volto-redmine-helpdesk": "0.2.0",
@@ -192,8 +192,8 @@
     "@eeacms/volto-eea-design-system": "1.23.6",
     "@eeacms/volto-eea-kitkat": "24.0.1",
     "@eeacms/volto-eea-map": "3.3.1",
-    "@eeacms/volto-eea-website-policy": "1.14.0",
-    "@eeacms/volto-eea-website-theme": "1.33.2",
+    "@eeacms/volto-eea-website-policy": "<2.0.0",
+    "@eeacms/volto-eea-website-theme": "<2.0.0",
     "@eeacms/volto-embed": "9.1.1",
     "@eeacms/volto-globalsearch": "1.1.0",
     "@eeacms/volto-plotlycharts": "9.2.0",
