--- a/package.json
+++ b/package.json
@@ -161,6 +161,45 @@
     "node": "^12 || ^14 || ^16"
   },
   "resolutions": {
+    "@eeacms/volto-controlpanel": "0.3.0",
+    "@eeacms/volto-nextcloud-video-block": "0.4.8",
+    "@eeacms/volto-anchors": "0.7.0",
+    "@eeacms/volto-quote-block": "1.2.3",
+    "@eeacms/volto-statistic-block": "4.1.0",
+    "@eeacms/volto-tags-block": "1.2.4",
+    "@eeacms/volto-call-to-action-block": "4.3.1",
+    "@eeacms/volto-hero-block": "6.0.1",
+    "@eeacms/volto-timeline-block": "1.1.5",
+    "@eeacms/volto-description-block": "1.2.4",
+    "@eeacms/volto-slate-label": "0.6.0",
+    "@plone-collective/volto-sentry": "0.3.1",
+    "@eeacms/volto-accordion-block": "10.4.6",
+    "@eeacms/volto-banner": "3.1.5",
+    "@eeacms/volto-block-divider": "6.2.0",
+    "@eeacms/volto-block-image-cards": "1.3.8",
+    "@eeacms/volto-block-style": "6.1.0",
+    "@eeacms/volto-columns-block": "7.1.0",
+    "@eeacms/volto-corsproxy": "3.1.5",
+    "@eeacms/volto-group-block": "6.4.0",
+    "@eeacms/volto-listing-block": "7.1.0",
+    "@eeacms/volto-matomo": "4.2.1",
+    "@eeacms/volto-metadata-block": "6.0.6",
+    "@eeacms/volto-object-widget": "6.0.0",
+    "@eeacms/volto-resize-helper": "1.3.4",
+    "@eeacms/volto-sentry-rancher-config": "4.0.0",
+    "@eeacms/volto-slate-footnote": "6.3.0",
+    "@eeacms/volto-slate-metadata-mentions": "7.0.3",
+    "@eeacms/volto-slate-zotero": "5.2.7",
+    "@eeacms/volto-tabs-block": "7.5.1",
+    "@eeacms/volto-taxonomy": "4.1.2",
+    "@eeacms/volto-toolbar-actions": "1.0.3",
+    "@eeacms/volto-block-data-table": "0.1.2",
+    "@eeacms/volto-widget-geolocation": "5.3.1",
+    "@eeacms/volto-widget-dataprovenance": "0.4.3",
+    "@eeacms/volto-widget-temporal-coverage": "5.2.0",
+    "@eeacms/volto-widget-toggle": "3.1.4",
+    "@eeacms/volto-widget-theme-picker": "1.1.5",
+    "@eeacms/countup": "2.0.6",
     "@eeacms/volto-embed": "9.1.1",
     "@eeacms/volto-datablocks": "6.4.1",
     "@eeacms/volto-datahub": "1.0.33",
