--- a/package.json
+++ b/package.json
@@ -168,6 +168,7 @@
     "node": "^18 || ^20"
   },
   "resolutions": {
+    "@elastic/search-ui": "1.21.2",
     "@eeacms/volto-embed": "10.0.0",
     "@eeacms/volto-embed-static-content": "0.2.0",
     "@eeacms/volto-datablocks": "7.0.3",
