--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "razzle start",
     "postinstall": "make omelette && make patches",
+    "analyze": "BUNDLE_ANALYZE=true razzle build --noninteractive",
     "build": "razzle build --noninteractive",
     "lint": "./node_modules/eslint/bin/eslint.js --max-warnings=0 'src/**/*.{js,jsx,ts,tsx}'",
     "lint:fix": "./node_modules/eslint/bin/eslint.js --fix 'src/**/*.{js,jsx,ts,tsx}'",
@@ -189,6 +190,8 @@
     "@eeacms/volto-citation": "1.0.0",
     "@plone-collective/volto-authomatic": "2.0.1",
     "volto-subsites": "4.0.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-colorscales": "github:eea/react-colorscales#1.0.2",
     "d3-array": "^2.12.1",
     "react-error-overlay": "6.0.9",
