--- a/package.json
+++ b/package.json
@@ -68,6 +68,14 @@
     "@eeacms/volto-citation",
     "volto-subsites"
   ],
+  "bundlewatch": {
+    "files": [
+      {
+        "path": "build/public/static/js/*.js",
+        "maxSize": "700kB"
+      }
+    ]
+  },
   "jest": {
     "modulePathIgnorePatterns": [
       "api"
@@ -232,6 +240,7 @@
     "@typescript-eslint/eslint-plugin": "6.7.0",
     "@typescript-eslint/parser": "6.7.0",
     "brotli-webpack-plugin": "1.1.0",
+    "bundlewatch": "0.3.3",
     "compression-webpack-plugin": "10.0.0",
     "eslint-plugin-prettier": "3.1.3",
     "jest-junit": "8.0.0",
