--- a/package.json
+++ b/package.json
@@ -73,6 +73,18 @@
       {
         "path": "build/public/static/js/*.js",
         "maxSize": "700kB"
+      },
+      {
+        "path": "build/public/static/js/react-plotly*.js",
+        "maxSize": "1.1MB"
+      },
+      {
+        "path": "build/public/static/js/404*.js",
+        "maxSize": "1.1MB"
+      },
+      {
+        "path": "build/public/static/js/client*.js",
+        "maxSize": "1.4MB"
       }
     ]
   },
